upgrade to tailwind 4

--- a/src/components/CapoBadge.astro
+++ b/src/components/CapoBadge.astro
@@ -10,6 +10,6 @@ const { class: className } = Astro.props
 
 <span
   class={twMerge(
-    'h-2 w-2 rounded-sm bg-gradient-to-t from-orange-500 to-orange-400 inline-block',
+    'h-2 w-2 rounded-xs bg-linear-to-t from-orange-500 to-orange-400 inline-block',
     className,
   )}></span>
