--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -18,7 +18,7 @@ import ArrowUpRightIcon from './icons/ArrowUpRightIcon.astro'
       src={avatarImageUrl}
       alt=""
       class={twMerge(
-        'h-8 w-8 shrink-0 translate-y-0.5 rounded-full bg-gradient-to-t from-orange-300 to-orange-200 ring-1 ring-inset ring-orange-400/25',
+        'h-8 w-8 shrink-0 translate-y-0.5 rounded-full bg-linear-to-t from-orange-300 to-orange-200 ring-1 ring-inset ring-orange-400/25',
         'dark:ring-orange-50/25',
       )}
     />
