--- a/src/components/TunerBadge.astro
+++ b/src/components/TunerBadge.astro
@@ -10,6 +10,6 @@ const { class: className } = Astro.props
 
 <span
   class={twMerge(
-    'h-2 w-2 rounded-full bg-gradient-to-t from-purple-500 to-purple-400 inline-block',
+    'h-2 w-2 rounded-full bg-linear-to-t from-purple-500 to-purple-400 inline-block',
     className,
   )}></span>
