--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import '../styles/global.css'
 import SpeedInsights from '@vercel/speed-insights/astro'
 import '@fontsource-variable/inter'
 import { twMerge } from 'tailwind-merge'
@@ -24,7 +25,7 @@ const { title, description } = Astro.props
   </head>
   <body
     class={twMerge(
-      'mx-auto max-w-screen-md px-5 pt-8 pb-[calc(env(safe-area-inset-bottom)+theme(spacing.8))] pb-safe text-stone-800',
+      'mx-auto max-w-(--breakpoint-md) px-5 pt-8 pb-[calc(env(safe-area-inset-bottom)+(--spacing(8)))] pb-safe text-stone-800',
       'dark:bg-black dark:text-stone-100',
     )}
   >
