--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -278,6 +278,11 @@ const { Content } = await tab.render()
     @apply dark:text-stone-100;
   }
 
+  .content :global(.hljs.language-tab .hljs-string .hljs-tuning) {
+    @apply text-stone-400;
+    @apply dark:text-stone-500;
+  }
+
   .content :global(.hljs.language-tab .hljs-string .hljs-dash) {
     @apply text-stone-300;
     @apply dark:text-stone-600;
